--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <section id="hero" class="hero">
         <div class="container hero-content">
             <p class="role-tag">Hello, I'm</p>
+            <img src="assets\images\Final Edited BG.png" alt="Meet Kakadiya" class="profile-pic">
             <h1>Meet Kakadiya</h1>
             <h3>Android Developer | Graphics Designer</h3>
             <p class="tagline">
@@ -181,6 +182,7 @@
 
                 <div class="project-card">
                     <div class="project-content">
+                        <img src="assets/images/cookerya.png" alt="Cookerya App" class="app-icon">
                         <h3>Cookerya - Offline Recipe Management App</h3>
                         <p>
                             Cookerya is an offline-first Android app that helps users manage, plan, and organize recipes on their device.
@@ -194,6 +196,7 @@
 
                 <div class="project-card">
                     <div class="project-content">
+                        <img src="assets/images/tathastu.png" alt="Tathastu App" class="app-icon">
                         <h3>TATHASTU - The Donation App</h3>
                         <p>
                             TATHASTU is a donation management Android application designed to connect Donors, NGOs, and Needy individuals.
@@ -207,6 +210,7 @@
 
                 <div class="project-card">
                     <div class="project-content">
+                        <img src="assets/images/Loan EMI.png" alt="Loan EMI App" class="app-icon">
                         <h3>Loan EMI Calculator</h3>
                         <p>
                             A native Android app (Java) that bundles a set of local, client-side financial calculators and supporting screens.
@@ -219,6 +223,7 @@
 
                 <div class="project-card">
                     <div class="project-content">
+                        <img src="assets/images/EMI Calc.png" alt="EMI Calc App" class="app-icon">
                         <h3>EMI Calculator — Financial Tools Android App</h3>
                         <p>
                             A compact Android application (Java) that bundles several financial calculators and related utilities.
@@ -232,6 +237,7 @@
 
                 <div class="project-card">
                     <div class="project-content">
+                        <img src="assets/images/Age Calc.png" alt="Age Calc App" class="app-icon">
                         <h3>DatePicker — Age Calculator</h3>
                         <p>
                             A simple Android app (Java) that demonstrates date picking and age calculation.
